--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <br>
     My wife and I have been married for 5 years, and we have a two year old daughter.  Outside of lots of coding, they are my life :).
     I enjoy many outdoor activities including running, hiking, and rock climbing.
+    <br>
+    This line is the change I made in activity D7.
   </p>
   <hr>
   <h2>Projects:</h2>
