--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
-  <title>Ben Winters Portfolio</title>
+  <title>About Me</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -17,33 +17,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="/pages/portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link" href="/pages/about.html">About Me</a>
+        <a class="nav-item nav-link active" href="/pages/about.html">About Me</a>
         <a class="nav-item nav-link" href="/pages/contact.html">Contact Me</a>
       </div>
     </div>
   </nav>
   <div class="menu-spacer"></div>
   <div class="page">
-    <h3>Hi there, I'm</h3>
-    <h1>Ben Winters</h1>
-    <h2>Software Engineer</h2>
+    <h1>About Me</h1>
 
-    <br><br>
-    <div class="container">
-      <div class="row">
-        <div class="col"><img src="/img/byulogo.png"></div>
-        <div class="col"><p>I am currently finishing my last semester at Brigham Young University.  I will graduate in May with a
-          Bachelor's Degree in Computer Science.
-        </p></div>
-      </div>
-      <div class="hr"><hr></div>
-      <div class="row">
-        <div class="col"><img class="lucid" src="/img/lucid.png"></div>
-      </div>
 
-    </div>
 
 
   </div>
