--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="col"><img src="/img/byulogo.png"></div>
-        <div class="col"><p>I am currently finishing my last semester at Brigham Young University.  I will graduate in May with a
+        <div class="col"><p>I am currently finishing my last semester at Brigham Young University.  I will graduate in May 2022 with a
           Bachelor's Degree in Computer Science.
         </p></div>
       </div>
