Add style for portfolio.  need content

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -25,14 +25,20 @@
     </div>
   </nav>
   
+  <div class="menu-spacer"></div>
   <div class="page">
-    <h1>My Portfolio</h1>
-
-
+    <h1>Projects</h1>
+    <img class="project-img" src="/img/conway.png">
+    <h2>Conway's Game of Life</h2>
+    <p class="project-info">Over Christmas break, my brother challenged me to a code-off.  We coded up Conway's Game of Life cell simulation and compared results :).  I used
+      Python with tkinter for my GUI.  This implementation is able to run the simulation, allows for selecting and deselecting cells for custom designs,
+      and increasing or slowing down the speed of the simulation iteration.
+    </p>
+    <h1>Research</h1>
 
 
   </div>
-  
+  <br><br>  
   <footer>
     <a href="https://www.linkedin.com/in/benjamin-winters-0319bb21b/" target="_blank"><img class="icon" src="/img/li.png"></a>
     <a href="https://github.com/bwinte19" target="_blank"><img class="icon" src="/img/gh.png"></a>
