Add portfolio page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -32,10 +32,29 @@
     <h2>Conway's Game of Life</h2>
     <p class="project-info">Over Christmas break, my brother challenged me to a code-off.  We coded up Conway's Game of Life cell simulation and compared results :).  I used
       Python with tkinter for my GUI.  This implementation is able to run the simulation, allows for selecting and deselecting cells for custom designs,
-      and increasing or slowing down the speed of the simulation iteration.
+      and increasing or slowing down the speed of the simulation iteration. <br><a href="https://github.com/bwinte19/congol" target="_blank">View Source Code Here</a>
     </p>
-    <h1>Research</h1>
+    
+    <img class="project-img" src="/img/fsa.png">
+    <h2>Finite State Automota</h2>
+    <p class="project-info">This is an ongoing project.  I am working on writing a simple scripting language that allows a user to define 
+      finite state machines.  The parser will then be able to simulate the machine and check if input strings are accepted by the machine's language.
+      My code currently can handle simulating programatically created deterministic machines, but I am working on extending the capability to full
+      parsing of the scripting language and non-determinism.  My source code for this project is currently not available for public view.  Contact me if
+      you would like to access it.</a>
+    </p>
 
+    <hr>
+    <h1>Research</h1>
+    <h2>SHA Algorithm Verification</h2>
+    <p class="project-info">For the last few years, I have been working in Dr. Eric Mercer's Verification and Validation lab at BYU.
+      As part of that, I have worked on performing functional equivalence verification of OpenSSL's SHA-2 and SHA-3 algorithm families to
+      the defined NIST standards.
+      <br>The work done on SHA-2 was published in NASA's Formal Methods conference (NFM 2021).  The contents of that work can be found 
+      <a href="https://link.springer.com/chapter/10.1007/978-3-030-76384-8_5", target="_blank">here</a>.
+      <br>
+      Our work on SHA-3 is currently being reviewed by the NFM 2022 committee.
+    </p>
 
   </div>
   <br><br>  
