--- a/pages/about.html
+++ b/pages/about.html
@@ -84,6 +84,7 @@
   </div>
   
   <footer>
+    <p>The source code for this site can be found <a href="https://github.com/bwinte19/portfolio" target="_blank">here</a>.</p>
     <a href="https://www.linkedin.com/in/benjamin-winters-0319bb21b/" target="_blank"><img class="icon" src="/img/li.png"></a>
     <a href="https://github.com/bwinte19" target="_blank"><img class="icon" src="/img/gh.png"></a>
     <a href="https://www.facebook.com/benjamin.winters.581/" target="_blank"><img class="icon" src="/img/fb.png"></a>
